Fix vendors table width overflow issue

--- a/private/require/css/popup-windows.css
+++ b/private/require/css/popup-windows.css
@@ -173,7 +173,7 @@
 }
 
 #vendors-popup-window table tr td {
-    max-width: 20vh;
+    max-width: 10vh;
 }
 
 #vendors-popup-window table thead tr td {
